# cudnn-training

./: CMakeLists.txt
cmake/: FindCUDNN.cmake
